Added: Footer com contato
Adicionado footer do site com os links e link para envio de email (ainda
é necessário fazer os links funcionarem);

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,4 @@
 .icon {
-	margin-bottom: 50px;
 	border-radius: 50%;
 	position: relative;
 	left: 50%;
@@ -26,6 +25,7 @@
 }
 
 .background {
+	margin: 0;
 	background-image: url('../../images/background2.jpg');
 	opacity: .9;
 }
