--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  -webkit--text-size-adjust: none;
   -moz-osx-font-smoothing: grayscale;
-
   	display: flex;
  	min-height: 100vh;
   	flex-direction: column;
